# nguyenpanda.com

./: .gitignore  .gitmodules  .hintrc  README.md  main.py  pack.py  pyproject.toml  setup.py
config/: base.yaml  config.yaml
public/errors/: 401.html  404.html
public/pages/: archive.html  gallery.html  home.html  hpc.html  phuongdoan.html  portal.html  projects.html  research.html
public/scripts/: script.js  utils.js
public/scripts/modules/: gallery.js  sidebar.js  stats.js  theme.js  yaml.js
public/styles/: phuongdoan.css  style.css
src/nguyenpanda_com/: __init__.py  filehandler.py
src/nguyenpanda_com/config/: __init__.py  config.py  func.py
src/nguyenpanda_com/logger/: __init__.py  log.py
